# Reading-Comprehension-Prediction

./: CITATION.cff  README.md  environment.yml  pyproject.toml
data/folds/items/: fold_0.csv  fold_1.csv  fold_2.csv  fold_3.csv  fold_4.csv  fold_5.csv  fold_6.csv  fold_7.csv  fold_8.csv
data/folds/subjects/: fold_0.csv  fold_1.csv  fold_2.csv  fold_3.csv  fold_4.csv  fold_5.csv  fold_6.csv  fold_7.csv  fold_8.csv  fold_9.csv
data/interim/: .gitignore  consecutive_same_values_unique_2.csv  qas_entropy.csv
notebooks/: display_results Appendix.ipynb  display_results.ipynb  stats.ipynb
scripts/: better_hyperparameters_sweep.py  better_hyperparameters_sweep_ml.py  cleanup_models.py  create_sweep_config_csv.py  eval_wrapper.sh  hyper_sweep.sh  parse_data.py  run_all_eval_jobs.sh  run_eval.sh  run_generic_sweep_local.sh  run_sweep_configs_remote.py  run_wrapper.py  search_spaces_and_configs.py  slurm_eval_wrapper.sh  sweep_wrapper.sh  sync_features.sh  syncer.sh  train_preprocess.sh
src/: ETDataset.py  FoldSplitter.py  TextDataSet.py  __init__.py  datamodule.py  eval.py  external_features_extractor.py  input_variations.ipynb  train.py  train_ml.py  train_utils.py
src/configs/: constants.py  data_args.py  data_path_args.py  main_config.py  prediction_modes.py  trainer_args.py  trainer_args_ml.py  utils.py
src/models/: ahn_baseline.py  base_model.py  base_roberta.py  beyelstm_model.py  eyettention_model.py  fse_model.py  lit_model.py  mag_model.py  mlp_model.py  models_ml.py  post_fusion_model.py  roberteye_model.py  total_rt_mlp.py  utils.py
(+15 files in other folders)
