[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognitive_state_decoding"
version = "0.1.0"
authors = [
  { name="Omer Shubi", email="omer.shubi@gmail.com" },
]
description = "Code to predict the cognitive state of a person based on their eye movements"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # TODO temporary
    "Operating System :: OS Independent",
]

dependencies = [
  # TODO add dependencies
]


[project.urls]
Homepage = "https://github.com/lacclab/Cognitive-State-Decoding"
repository = "https://github.com/lacclab/Cognitive-State-Decoding"
"Bug Tracker" = "https://github.com/lacclab/Cognitive-State-Decoding/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]